[deploy_website] Prevent overlap between crisp and menu buttons

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -27,3 +27,7 @@
 .navbar__logo {
   height: 64px !important;
 }
+
+.menu button {
+  margin-bottom: 70px;
+}
